--- a/kapitel/Fazit.tex
+++ b/kapitel/Fazit.tex
@@ -1,15 +1,18 @@
 %!TEX root = ../hausarbeit.tex
 \section{Fazit}
 
-Ich war Schüler an einer staatlichen Schule und kann somit nicht aus Erfahrung sprechen, wie es ist, an einer Waldorfschule unterrichtet zu werden. Meiner Meinung nach steht der Großteil der Menschen dem Neuen, vor allem aber dem Anderen sehr skeptisch gegnüber\footnote{Hierzu passt das Sprichwort von Oliver Hassencamp: Was der Bauer nicht kennt, frisst er nicht. [...] \citep[Vgl.][]{roschk13}}, was bei mir auch auf Reformpädagogische Schulen zutrifft. Wie ich im Seminar und während des Schreibens dieser Hausarbeit aber  gemerkt habe, kann man sich von vielen Vorurteilen lösen, wenn man sich nur näher mit der Thematik beschäftigt.
+Ich war Schüler an einer staatlichen Schule und kann somit nicht aus Erfahrung sprechen, wie es ist, an einer Waldorfschule unterrichtet zu werden. Meiner Meinung nach steht der Großteil der Menschen dem Neuen, vor allem aber dem Anderen sehr skeptisch gegenüber\footnote{Hierzu passt das Sprichwort von Oliver Hassencamp: Was der Bauer nicht kennt, frisst er nicht. [...] \citep[Vgl.][]{roschk13}}, was bei mir auch auf reformpädagogische Schulen zutrifft. Wie ich im Seminar und während des Schreibens dieser Hausarbeit aber  gemerkt habe, kann man sich von vielen Vorurteilen lösen, wenn man sich nur näher mit der Thematik beschäftigt.
 
-Wie wirkt nun die Waldorfpädagogik im Licht der Empirie? Schaut man sich die Studien oberflächlich an, hört sich das Meiste richtig toll an. Ein überdurchschnittlich hoher Anteil, der eine Akademikerlaufbahn einschlägt, ein hohes Maß an persönlichem Wohlbefinden auf der Schule, die Schüler lernen fürs Leben, nicht für Noten und das soziale Mit- und Füreinander wird stark gefördert. Wieso lernen die staatlichen Schulen also nicht von den Waldorfschulen? 
+Wie wirkt nun die Waldorfpädagogik im Licht der Empirie? Schaut man sich die Studien oberflächlich an, hört sich das Meiste richtig toll an. Ein überdurchschnittlich hoher Anteil, der eine Akademikerlaufbahn einschlägt, ein hohes Maß an persönlichem Wohlbefinden auf der Schule, die Schüler lernen fürs Leben, nicht für Noten und das soziale Mit- und Füreinander wird stark gefördert. Wieso lernen die staatlichen Schulen also nicht von den Waldorfschulen?
 
-Die von Steiner gegründete Schule profitiert natürlich erstmal von der sicherlich ungewollten selektierten Schülerschaft. Wie in Kapitel \ref{subsub:Berufswahl} beschrieben, haben 40\% der Väter ehemaliger Waldorfschüler einen Akademikertitel. Während die staatlichen Schulen z.T. sehr gemischte Klassen bezüglich Herkunft und Sozialschichten unterrichten, haben es die Waldorfschulen mit einer Klientel zu tun, die eher aus der gehobeneren Bildungsschicht stammt und bei denen die Schulkosten kein größeres Problem darstellen\footnote{Während die Kosten des Schulbesuch an staatlichen Schulen der Steuerzahler übernimmt, müssen Eltern in Waldorfschulen im Durchschnitt ca. 150 € pro Monat bezahlen (Stand 2007). Das Schulgeld stieg seit 2000 um rund 20\%. \citep[Vgl.][]{mannheim09}}. Sie können zum Einen ihre Kinder selber gut fördern und zum Anderen auch hohe Bildungs- und Erziehungsansprüche an die Schule stellen, sowie die Arbeit der Lehrer vielfältig unterstützen. Darauf können staatliche Schulen nicht in diesem Maße zurückgreifen. 
+\todo{'hört sich das Meiste \textbf{richtig toll} an' ist Umgangssprache... besser: '..., ist die Waltdorpädagogik von vielen Vorteilen geprägt' oder so}
 
-Anhand der Daten der beschriebenen Studie kann man sagen, dass die Waldorfschulen hinsichtlich der Förderung sozialer und personaler Fähigkeiten sehr gut sind. Man muss sich aber doch auch die Frage stellen, ob neue didaktische Modelle zeitnah den Einzug in die Waldorfpädagogik erhalten oder ob und in welchem Ausmaß an den inzwischen 90 jahre alten traditionellen Formen des Waldorfunterrichts festgehalten wird. Dies kann dazu führen, dass sie blind gegenüber der Realität werden und sich selber von Neuerungen ausschließen. So z.B. mit dem Umgang von Leistungsanforderungen und Konkurrenzsituationen, was man in der späteren Arbeitswelt doch sehr häufig antrifft. Nichts desto trotz kann man feststellen, dass die Waldorfpädagogik sehr persönlichkeitsbildend wirkt. Die Schüler verlassen die Schule mit einem hohen Maß an Erfahrungen, Fertigkeiten, sozialen Fähigkeiten und vor allem sind sie interessiert. 
+Die von Steiner gegründete Schule profitiert natürlich erst mal von der sicherlich ungewollten selektierten Schülerschaft. Wie in Kapitel \ref{subsub:Berufswahl} beschrieben, haben 40\% der Väter ehemaliger Waldorfschüler einen Akademikertitel. Während die staatlichen Schulen z.T. sehr gemischte Klassen bezüglich Herkunft und Sozialschichten unterrichten, haben es die Waldorfschulen mit einer homogenen Klientel zu tun, die eher aus der gehobeneren Bildungsschicht stammt und bei denen die Schulkosten kein größeres Problem darstellen\footnote{Während die Kosten des Schulbesuch an staatlichen Schulen der Steuerzahler übernimmt, müssen Eltern in Waldorfschulen im Durchschnitt ca. 150 € pro Monat bezahlen (Stand 2007). Das Schulgeld stieg seit dem Jahrtausendwechsel um rund 20\%. \citep[Vgl.][]{mannheim09}}. Sie können zum Einen ihre Kinder selbst gut fördern und zum Anderen auch hohe Bildungs- und Erziehungsansprüche an die Schule stellen, sowie die Arbeit der Lehrer vielfältig unterstützen. Darauf können staatliche Schulen nicht in diesem Maße zurückgreifen. 
 
-Alle Zweifel konnte ich also noch nicht ausräumen, jedoch bin ich offener dieser Schulform gegenüber geworden und wünsche ihr, dass sie stärker über ihre Methoden nachdenken wird und sich auch der empirischen Wissenschaft gegenüber noch weiter öffnet. So kann sie auch von außen her noch mehr Anstöße bekommen, wie sie sich weiter in die richtige Richtung entwicklen kann. Außerdem ist es der Waldorfpädagogik zu wünschen, dass durch mehr öffentliche Gelder auch wieder mehr finanziell schwächere Menschen diese Schule besuchen können. 
+Anhand der Daten der beschriebenen Studie kann man sagen, dass die Waldorfschulen hinsichtlich der Förderung sozialer und personaler Fähigkeiten sehr gut sind. Man muss sich aber auch die Frage stellen, ob neue didaktische Modelle zeitnah den Einzug in die Waldorfpädagogik einhalten oder ob und in welchem Ausmaß an den inzwischen 90 Jahre alten traditionellen Formen des Waldorfunterrichts festgehalten wird. Dies kann dazu führen, dass sie blind gegenüber der Realität werden und sich selber von Neuerungen ausschließen. \todo{Wer ist mit 'sie' im vorangehenden Satz gemeint? Wenns die Waldorfschule ist, dann sollte es danach '...gegenüber der Realität \textbf{wird}' heissen. Überhaupt hab ich das Gefühl, dass in diesem Abschnitt mal über die Schule und mal über die Schüler gesprochen wird. Im folgenden Satz fehlt ein Prädikat.} So z.B. mit dem Umgang von Leistungsanforderungen und Konkurrenzsituationen, was man in der späteren Arbeitswelt doch sehr häufig antrifft. Nichts desto trotz kann man feststellen, dass die Waldorfpädagogik sehr persönlichkeitsbildend wirkt. Die Schüler verlassen die Schule mit einem hohen Maß an Erfahrungen, Fertigkeiten, sozialen Fähigkeiten und vor allem sind sie interessiert. 
 
+Alle Zweifel konnte ich also noch nicht ausräumen, jedoch bin ich offener dieser Schulform gegenüber geworden und wünsche ihr, dass sie stärker über ihre Methoden nachdenken wird und sich auch der empirischen Wissenschaft gegenüber noch weiter öffnet. So kann sie auch von außen her noch mehr Anstöße bekommen, wie sie sich weiter in die richtige Richtung entwickeln kann. Außerdem ist es der Waldorfpädagogik zu wünschen, dass durch mehr öffentliche Gelder auch wieder mehr finanziell schwächere Menschen diese Schule besuchen können. 
+
+\todo{Schreibt man so viel eigene Meinung beim Fazit?}
 
 
