--- a/kapitel/Die_Waldorfschule.tex
+++ b/kapitel/Die_Waldorfschule.tex
@@ -7,9 +7,9 @@
 % subsection die_entstehungsphase (end)
 Die Waldorfpädagogik ist nicht aus einem einheitlichen Guss entstanden, sondern in einem fortlaufenden Prozess. Sie wurde von Steiner auf Basis seiner bisherigen Gedanken zur Theosophie und Anthroposophie entwickelt. Ausschlaggebend war das Drängen von Emil Molt, der, wie in Kapitel \ref{sub:biographie_steiner_in_seinen_sp_ten_jahren} auf Seite \pageref{sub:biographie_steiner_in_seinen_sp_ten_jahren} beschrieben, eine Betriebsschule für die Kinder seiner Arbeiter gründen wollte. \citet[S. 125]{hemleben63} schrieb, dass Steiner \enquote{die Schule zu seiner Herzensangelegenheit} machte. Er nutzte die Anthroposophie zum Aufbau seiner Erziehungskunst.
 
-Schon sehr bald erhielt das Konzept von Steiner die Zustimmung des Kultusministers aus Württemberg. Ihm gefiel besonders die Idee der Gesamtschule. Hier sollte auch den Schülern der Arbeiterklasse eine vollwertige Bildung geboten werden. \citep[Vgl.][S. 279]{frielingsdorf12} 
+Schon sehr bald erhielt das Konzept von Steiner die Zustimmung des Kultusministers aus Württemberg. Ihm gefiel besonders die Idee der Gesamtschule. Hier sollte auch den Schülern der Arbeiterklasse eine vollwertige Bildung geboten werden \citep[vgl.][S. 279]{frielingsdorf12}. 
 
-In den darauf folgenden Jahren wurden weltweit weitere Waldorfschulen gegründet. Wie in \citet{wikipedia2} beschrieben, gab es schon 1928 Waldorfschulen in Basel, Budapest, London, Lissabon und New York. In der Zeit des Nationalsozialismus lösten sich in Deutschland sechs Schulen selbst auf, die verbleibenden drei Waldorfschulen wurden bis 1941 geschlossen. Die Unterrichtsmethoden hätten  keine Gemeinsamkeit mit den nationalsozialistischen Erziehungsgrundsätzen, hieß es im Dekret von Reinhard Heidrich. Ab den 70er Jahren gab es dann Wieder- und Neugründungen in großem Umfang sowohl im In- als auch im Ausland. \citep[Vgl.][]{wikipedia2} 
+In den darauf folgenden Jahren wurden weltweit weitere Waldorfschulen gegründet. Wie in \citet{wikipedia2} beschrieben, gab es schon 1928 Waldorfschulen in Basel, Budapest, London, Lissabon und New York. In der Zeit des Nationalsozialismus lösten sich in Deutschland sechs Schulen selbst auf, die verbleibenden drei Waldorfschulen wurden bis 1941 geschlossen. Die Unterrichtsmethoden hätten  keine Gemeinsamkeit mit den nationalsozialistischen Erziehungsgrundsätzen, hieß es im Dekret von Reinhard Heidrich. Ab den 70er Jahren gab es dann Wieder- und Neugründungen in großem Umfang sowohl im In- als auch im Ausland \citep[vgl.][]{wikipedia2}. 
 
 
 \subsection{Die Entwicklungsphasen nach Steiner} % (fold)
@@ -26,18 +26,18 @@ Die Waldorfpädagogik erschließt sich vom Kindergarten bis zum Abitur. Steiner 
 \subsection{Organisation} % (fold)
 \label{sub:organisation}
 
-Die Schüler werden in der Regel von der ersten bis zur zwölften Klasse gemeinsam unterrichtet. Um den staatlichen Anforderungen gerecht zu werden, gibt es an den meisten deutschen Schulen eine zusätzliche Klasse, um die Schüler auf die Abiturprüfungen vorbereiten zu können. In der Waldorfschule gibt es kein Sitzenbleiben, so dass die Klassen nicht auseinandergerissen werden müssen. Soziales Verhalten wird in hohem Maße geübt. Es wird vermittelt, dass der begabtere Schüler dem etwas unbegabteren helfen solle. So lernt dieser auch direkt, seine sozialen Kräfte richtig einzusetzen. Viel Wert wird auch auf ein funktionierendes Vertrauensverhältnis von Lehrern und Eltern gelegt. So gehören Elternabende zu den regelmäßigen Einrichtungen der Waldorfschulen. \citep[Vgl.][]{kiersch07, hemleben63}
+Die Schüler werden in der Regel von der ersten bis zur zwölften Klasse gemeinsam unterrichtet. Um den staatlichen Anforderungen gerecht zu werden, gibt es an den meisten deutschen Schulen eine zusätzliche Klasse, um die Schüler auf die Abiturprüfungen vorbereiten zu können. In der Waldorfschule gibt es kein Sitzenbleiben, so dass die Klassen nicht auseinandergerissen werden müssen. Soziales Verhalten wird in hohem Maße geübt. Es wird vermittelt, dass der begabtere Schüler dem etwas unbegabteren helfen solle. So lernt dieser auch direkt, seine sozialen Kräfte richtig einzusetzen. Viel Wert wird auch auf ein funktionierendes Vertrauensverhältnis von Lehrern und Eltern gelegt. So gehören Elternabende zu den regelmäßigen Einrichtungen der Waldorfschulen \citep[vgl.][]{kiersch07, hemleben63}.
 
-Während der ersten acht Schuljahre hat die Klasse einen Klassenlehrer, der den gesamten Hauptunterricht\footnote{Im Hauptunterricht werden i.d.R. die Kernfächer Deutsch, Mathematik, Geometrie, Geschichte und Sozialkunde, Biologie, Chemie, Physik, Astronomie und Kunstbetrachtung bearbeitet. \citep[Vgl.][S. 50]{kiersch07}} erteilt. Dadurch kann der Lehrer viel engere menschliche Bindungen mit den Schülern eingehen und es bildet sich beim Lehrer eine subtilere Kenntnis der Schüler, als dies durch das Fachlehrersystem möglich wäre. Die Klasse wächst zu einer engen Gemeinschaft zusammen. Erst ab der neunten Klasse wird der Unterricht von unterschiedlichen Fachlehrern erteilt. Jetzt beginnt in der Regel auch erst die Differenzierung nach Begabungen oder beruflichen Interessen. Dies wirkt sich in der Wahl der Fremdsprachen und den praktischen Fächern aus. Die Schüler bleiben in den Hauptfächern und in mehreren künstlerischen Fächern weiterhin zusammen. So wird dem Ideal von Steiner entsprochen, welches er 1919 entworfen hat, so dass zukünftige Arbeiter und Akademiker zusammen unterrichtet werden. Mehrere Schulen arbeiten daran, Praktika und berufsvorbereitende Grundkurse einzuführen, um denjenigen Schülern den Übergang ins Berufsleben zu erleichtern, die keine wissenschaftliche Ausbildung anstreben. Manche bieten auch eine handwerkliche Lehre an, die auf den übrigen Ausbildungsplan abgestimmt ist.  \citep[Vgl.][]{kiersch07, hemleben63}
+Während der ersten acht Schuljahre hat die Klasse einen Klassenlehrer, der den gesamten Hauptunterricht\footnote{Im Hauptunterricht werden i.d.R. die Kernfächer Deutsch, Mathematik, Geometrie, Geschichte und Sozialkunde, Biologie, Chemie, Physik, Astronomie und Kunstbetrachtung bearbeitet \citep[vgl.][S. 50]{kiersch07}.} erteilt. Dadurch kann der Lehrer viel engere menschliche Bindungen mit den Schülern eingehen und es bildet sich beim Lehrer eine subtilere Kenntnis der Schüler, als dies durch das Fachlehrersystem möglich wäre. Die Klasse wächst zu einer engen Gemeinschaft zusammen. Erst ab der neunten Klasse wird der Unterricht von unterschiedlichen Fachlehrern erteilt. Jetzt beginnt in der Regel auch erst die Differenzierung nach Begabungen oder beruflichen Interessen. Dies wirkt sich in der Wahl der Fremdsprachen und den praktischen Fächern aus. Die Schüler bleiben in den Hauptfächern und in mehreren künstlerischen Fächern weiterhin zusammen. So wird dem Ideal von Steiner entsprochen, welches er 1919 entworfen hat, so dass zukünftige Arbeiter und Akademiker zusammen unterrichtet werden. Mehrere Schulen arbeiten daran, Praktika und berufsvorbereitende Grundkurse einzuführen, um denjenigen Schülern den Übergang ins Berufsleben zu erleichtern, die keine wissenschaftliche Ausbildung anstreben. Manche bieten auch eine handwerkliche Lehre an, die auf den übrigen Ausbildungsplan abgestimmt ist \citep[vgl.][]{kiersch07, hemleben63}.
 
 \subsection{Unterrichtsstruktur und Beurteilungen} % (fold)
 \label{sub:unterrichtsstruktur_und_Beurteilungen}
-Die Fächer des Hauptunterrichts werden in der Regel während der gesamten Waldorfzeit in den ersten zwei Unterrichtsstunden ohne Pause gelehrt. Sie werden abwechselnd in Epochen von drei bis vier Wochen unterrichtet. Fremdsprachen oder auch andere Fächer, die permanentes Üben erfordern\footnote{Hierunter fallen z.B. handwerkliche und musische Fächer, Gartenbau, Eurythmie, Sport und Religion \citep[Vgl.][]{waldorfschule13}}, werden anschließend in Fachstunden nach einem festen Wochenstundenplan gelehrt. Dadurch soll dem natürlichen Tagesrhythmus des Menschen gefolgt und ein Ausgleich geschaffen werden. Der rhythmische Wechsel der Ansprüche und der Einsatzmöglichkeiten soll sich sehr positiv auf den Lernfortschritt auswirken und ein zerstückelter Lehrplan wird vermieden. Um die Schüler durch Hören in eine Sprache einzuführen, wird an Waldorfschulen bereits ab der ersten Klasse Englisch und Französisch gelehrt. \citep[Vgl.][]{kiersch07, hemleben63} 
+Die Fächer des Hauptunterrichts werden in der Regel während der gesamten Waldorfzeit in den ersten zwei Unterrichtsstunden ohne Pause gelehrt. Sie werden abwechselnd in Epochen von drei bis vier Wochen unterrichtet. Fremdsprachen oder auch andere Fächer, die permanentes Üben erfordern\footnote{Hierunter fallen z.B. handwerkliche und musische Fächer, Gartenbau, Eurythmie, Sport und Religion \citep[vgl.][]{waldorfschule13}.}, werden anschließend in Fachstunden nach einem festen Wochenstundenplan gelehrt. Dadurch soll dem natürlichen Tagesrhythmus des Menschen gefolgt und ein Ausgleich geschaffen werden. Der rhythmische Wechsel der Ansprüche und der Einsatzmöglichkeiten soll sich sehr positiv auf den Lernfortschritt auswirken und ein zerstückelter Lehrplan wird vermieden. Um die Schüler durch Hören in eine Sprache einzuführen, wird an Waldorfschulen bereits ab der ersten Klasse Englisch und Französisch gelehrt \citep[vgl.][]{kiersch07, hemleben63}.
 
 An den Waldorfschulen werden keine Zensurzeugnisse ausgestellt. Wie \cite{geuenich09} schrieb, erteilte Steiner diesen eine klare Absage. Die Waldorfzeugnisse zeichnen sich deshalb durch schriftliche Beurteilungen ohne Zensuren aus. 
 \todo{Müsste es nicht 'Wie ... \textbf{schreibt}, erteilte...' heissen, also im Präsenz, wenn man zitiert???}
 
-Einmal jährlich zum Schuljahresende erhält jeder Schüler eine ausführliche Gesamtbeurteilung durch den Klassenlehrer. Dieses wird durch einige Fachzeugnisse ergänzt. Ab der neunten Klasse erhält jeder Schüler Einzelbeurteilungen der Fachlehrer. Es kann jedoch auf besonderen Wunsch hin ein Notenzeugnis für abgehende Schüler erstellt werden. In den Zeugnissen soll nicht nur der erreichte Leistungsstand festgestellt, sondern auch die für jeden Schüler unterschiedlichen Ursachen für bessere oder schwächere Leistungen dargestellt werden. In diesem Zusammenhang werden auch Hinweise für die zukünftige Arbeit gegeben. \citep[Vgl.][S. 51]{kiersch07}
+Einmal jährlich zum Schuljahresende erhält jeder Schüler eine ausführliche Gesamtbeurteilung durch den Klassenlehrer. Dieses wird durch einige Fachzeugnisse ergänzt. Ab der neunten Klasse erhält jeder Schüler Einzelbeurteilungen der Fachlehrer. Es kann jedoch auf besonderen Wunsch hin ein Zensurzeugnis für abgehende Schüler erstellt werden. In den Zeugnissen soll nicht nur der erreichte Leistungsstand festgestellt, sondern auch die für jeden Schüler unterschiedlichen Ursachen für bessere oder schwächere Leistungen dargestellt werden. In diesem Zusammenhang werden auch Hinweise für die zukünftige Arbeit gegeben \citep[vgl.][S. 51]{kiersch07}.
 
 \todo{Manchmal schreibst du 'Notenzeugnis', manchmal 'Zensurzeugnis'. So weit ich weiß, sollte man in wissenschaftlichen Arbeiten lieber durchgehend einen Begriff verwenden.}
 
