--- a/kapitel/Empirische_Studie.tex
+++ b/kapitel/Empirische_Studie.tex
@@ -5,9 +5,7 @@
 
 % subsection empirische_forschung_an_waldorfschulen (end)
 
-Seit nunmehr gut 90 Jahren ist die Waldorfpädagogik mit stetigem Wachstum in Deutschland vertreten. Dennoch weist sie eine ca. 80-jährige Empirieabstinenz auf. In den Sozialwissenschaften wurden im Zuge der empirischen Wende\footnote{Der empirische Wendepunkt in der Erziehungswissenschaft begann mit der internationalen Studie PISA der OECD 2000, bzw. bereits 1996 mit den Timss-Studien der IEA für Mathematik. Seither werden Schüler vermessen, in Kompetenzstufen eingeordnet und in Bildungsstandards normiert. \citep[Vgl.][]{arp11}} eine große Zahl von Forschungsarbeiten durchgeführt und publiziert. Diese beschäftigten sich mit Fragen der Erziehung und Bildung, zu den Bedingungen der Prozesse schulischen Lernens etc. Im waldorfpädagogischen Zusammenhang findet man in dieser Hinsicht aber vergleichsweise wenig. Der Bund der freien Waldorfschulen hat sich damals z.B. gegen eine Teilnahme an der PISA Studie entschieden, da \enquote{eine utilitaristische sowie eine auf Leistung und Wettbewerb ausgerichtete Bildung eher fremd ist}. \citep[Vgl.][s.127ff]{paschen10}  Die einzelnen Schulen konnten allerdings selber entscheiden, ob sie daran teilnehmen wollen.
-
-\todo{'Dennoch weist sie eine ca. 80-jährige Empirieabstinenz auf.' würde ich umformulieren, etwa so: 'Dennoch wurde ca. 80 Jahre lang keine empirische Studie zu ihren Auswirkungen durchgeführt.' 'Empirieabstinenz' hört sich komisch an :)}
+Seit nunmehr gut 90 Jahren ist die Waldorfpädagogik mit stetigem Wachstum in Deutschland vertreten. Dennoch wurde ca. 80 Jahre lang keine emprirische Studie zu ihren Auswirkungen durchgeführt. In den Sozialwissenschaften wurden im Zuge der empirischen Wende\footnote{Der empirische Wendepunkt in der Erziehungswissenschaft begann mit der internationalen Studie PISA der OECD 2000, bzw. bereits 1996 mit den Timss-Studien der IEA für Mathematik. Seither werden Schüler vermessen, in Kompetenzstufen eingeordnet und in Bildungsstandards normiert \citep[vgl.][]{arp11}.} eine große Zahl von Forschungsarbeiten durchgeführt und publiziert. Diese beschäftigten sich mit Fragen der Erziehung und Bildung, zu den Bedingungen der Prozesse schulischen Lernens etc. Im waldorfpädagogischen Zusammenhang findet man in dieser Hinsicht aber vergleichsweise wenig. Der Bund der freien Waldorfschulen hat sich damals z.B. gegen eine Teilnahme an der PISA Studie entschieden, da \enquote{eine utilitaristische sowie eine auf Leistung und Wettbewerb ausgerichtete Bildung eher fremd ist} \citep[vgl.][s.127ff]{paschen10}.  Die einzelnen Schulen konnten allerdings selber entscheiden, ob sie daran teilnehmen wollen.
 
 An was kann es liegen, dass es so wenige empirische Studien zur Waldorfpädagogik gibt? \cite[S. 127f]{paschen10} nennt dafür folgende ausschlaggebende Gründe:
 
@@ -18,33 +16,26 @@ An was kann es liegen, dass es so wenige empirische Studien zur Waldorfpädagogi
 
     	\item Bisher gibt es in der Waldorfschulbewegung nicht viele Personen, die genügend forschungsmethodisches Wissen in den empirischen Sozialwissenschaften haben. Dadurch hat sich in der Vergangenheit kein größeres Bewusstsein für adäquate Fragestellungen entwickelt. 
 
-    	\item Bei Traditionalisten gelten die Äußerungen und Empfehlungen Rudolf Steiners zu Fragen der Erziehung und Bildung als unhinterfragbar. Auch nach Meinung vieler Anhänger bedarf die Waldorfpädagogik keiner kritisch-rationalen oder gar empirischen Auseinandersetzung, da es ja eine geisteswissenschaftlich begründete Pädagogik ist.
+    	\item Bei Traditionalisten gelten die Äußerungen und Empfehlungen Rudolf Steiners zu Fragen der Erziehung und Bildung als nicht hinterfragbar. Auch nach Meinung vieler Anhänger bedarf die Waldorfpädagogik keiner kritisch-rationalen oder gar empirischen Auseinandersetzung, da es ja eine geisteswissenschaftlich begründete Pädagogik ist.
     \end{itemize}
 
-    \todo{'unhinterfragbar' hört sich komisch an, besser wäre nicht hinterfragbar. Hmm, 'hinterfragbar' hört sich eigentlich auch komisch an.}
-
-Erst vor ca. zehn Jahren hat sich die Waldorfbewegung gegenüber dem empirischen Paradigma geöffnet. Der Anstoß kam allerdings von außen, weshalb dies erst mit großer Skepsis und Zurückhaltung geschah. Die Öffnung aus einer inneren Überzeugung heraus fehlte. Bestrebungen z.B. durch die Alanus Hochschule in Alfter\footnote{Die Alanus Hochschule ist eine staatlich anerkannte Privathochschule für Kunst und Gesellschaft. Sie bietet verschiedene Möglichkeiten der Qualifizierung von zukünftigen und tätigen Waldorflehrern an. \citep[Vgl.][]{alanus13}} fördern nun den Austausch zwischen Waldorfpädagogik und Erziehungswissenschaft. In deren \enquote{Arbeitskreis Empirische Forschung Waldorfpädagogik} werden zweimal im Jahr geplante, laufende und abgeschlossenen Forschungsarbeiten zu waldorfpädagogischen Fragen von Experten der Waldorfschulbewegung und verschiedener Universitäten vorgestellt und diskutiert.  \citep[Vgl.][S. 128]{paschen10}
-
-\todo{Oft (oder immer?) schreibst du einen Satz mit Punkt am Ende, dann die Literaturangabe mit Vgl...\\z.B. so: ...Universitäten vorgestellt und diskutiert.  \citep[Vgl.][S. 128]{paschen10}\\Macht man das nicht eher so:\\ ... Universitäten vorgestellt und diskutiert, \citep[vgl.][S. 128]{paschen10}.\\ Also mit Komma am Ende des Satzes und dann das vgl. ...\\wobei das vgl. auch außerhalb der eckigen Klammern ist.}
+Erst vor ca. zehn Jahren hat sich die Waldorfbewegung gegenüber dem empirischen Paradigma geöffnet. Der Anstoß kam allerdings von außen, weshalb dies erst mit großer Skepsis und Zurückhaltung geschah. Die Öffnung aus einer inneren Überzeugung heraus fehlte. Bestrebungen z.B. durch die Alanus Hochschule in Alfter\footnote{Die Alanus Hochschule ist eine staatlich anerkannte Privathochschule für Kunst und Gesellschaft. Sie bietet verschiedene Möglichkeiten der Qualifizierung von zukünftigen und tätigen Waldorflehrern an \citep[vgl.][]{alanus13}.} fördern nun den Austausch zwischen Waldorfpädagogik und Erziehungswissenschaft. In deren \enquote{Arbeitskreis Empirische Forschung Waldorfpädagogik} werden zweimal im Jahr geplante, laufende und abgeschlossenen Forschungsarbeiten zu waldorfpädagogischen Fragen von Experten der Waldorfschulbewegung und verschiedener Universitäten vorgestellt und diskutiert \citep[vgl.][S. 128]{paschen10}.
 
 \subsection{Absolventen von Waldorfschulen - Eine empirische Studie zu Bildung und Lebensgestaltung ehemaliger Waldorfschüler} % (fold)
 \label{Studie}
 
-Interessant ist die Frage, wie wirksam die Pädagogik Steiners wirklich ist. Das Charakteristikum der Waldorfpädagogik ist ja die Inanspruchnahme nachhaltiger Wirkungen im Blick auf eine erfolgreiche Lebensgestaltung.
-\citet[][S. 13]{randoll07} beschreiben die gelingende Lebensgestaltung wie folgt: \enquote{Von der Freude am beruflichen Engagement, über Verantwortungsbewusstsein für Gesellschaft und Umwelt bis hin zu positiven Einflüssen auf Lebensführung und Gesundheit im Alter reichen die Wirkungserwartungen}.
+Interessant ist die Frage, wie wirksam die Pädagogik Steiners wirklich ist. Das Charakteristikum der Waldorfpädagogik ist ja die Inanspruchnahme nachhaltiger Wirkungen im Blick auf eine erfolgreiche Lebensgestaltung. \citet[][S. 13]{randoll07} beschreiben die gelingende Lebensgestaltung wie folgt: \enquote{Von der Freude am beruflichen Engagement, über Verantwortungsbewusstsein für Gesellschaft und Umwelt bis hin zu positiven Einflüssen auf Lebensführung und Gesundheit im Alter reichen die Wirkungserwartungen}.
 
 Die Studie \enquote{Absolventen von Waldorfschulen - Eine empirische Studie zu Bildung und Lebensgestaltung ehemaliger Waldorfschüler} will herausfinden, ob sich Anhaltspunkte für die Verwirklichung der oben genannten Erwartungen finden lassen.
 Ziel der Studie war es, gesicherte Resultate zu erhalten, wie der Besuch von Waldorfschulen sich auf die Schüler ausgewirkt hat und was sie heute über diese Schulform denken.
 Die Studie wurde unter der Leitung von Professor Heiner Barz von der Heinrich Heine Universität Düsseldorf und von Professor Dirk Randoll von der Alanus Hochschule Alfter durchgeführt. 
 Für die Untersuchung wurden ehemalige Waldorfschüler dreier Altersgruppen eingehend befragt. 
 Es werden Berufskarrieren, Lebensorientierung, Religion und Gesundheit analysiert. 
-Die Schüler waren zum Zeitpunkt der Erhebung (2005/06) 62-66, 50-59 und 30-37 Jahre alt.   \citep[Vgl.][]{randoll07, paschen10}
+Die Schüler waren zum Zeitpunkt der Erhebung (2005/06) 62-66, 50-59 und 30-37 Jahre alt \citep[vgl.][]{randoll07, paschen10}
 
 \todo{Du wechselst beim Sprechen über die Studie zwischen Präsenz und Vergangenheit.}
 
-Die Erfassung von Veränderungen innerhalb der Waldorfschüler sowie unterschiedlichste Vergleiche zwischen der Population ehemaliger Waldorfschüler und der Grundgesamtheit ihrer gleichaltrigen Mitmenschen konnte durch die ausführliche standardisierte Befragungen dieser drei verschiedenen Absolventengenerationen ermöglicht werden. 
-Durch den Rückblick der ehemaligen kristallisieren sich Stärken und Schwächen der von ihnen erlebten Waldorfpädagogik heraus.
-Zum Beispiel das Bevorzugen und Vernachlässigen von Interessensdomänen oder die Gefahr der Abschottung nach außen hin, also alles, was nicht die Waldorfgemeinschaft betrifft.  \citep[Vgl.][S. 12]{randoll07}
+Die Erfassung von Veränderungen innerhalb der Waldorfschüler sowie unterschiedlichste Vergleiche zwischen der Population ehemaliger Waldorfschüler und der Grundgesamtheit ihrer gleichaltrigen Mitmenschen konnte durch die ausführliche standardisierte Befragungen dieser drei verschiedenen Absolventengenerationen ermöglicht werden. Durch den Rückblick der ehemaligen kristallisieren sich Stärken und Schwächen der von ihnen erlebten Waldorfpädagogik heraus. Zum Beispiel das Bevorzugen und Vernachlässigen von Interessensdomänen oder die Gefahr der Abschottung nach außen hin, also alles, was nicht die Waldorfgemeinschaft betrifft \citep[vgl.][S. 12]{randoll07}.
 
 \subsection{Hauptergebnisse zur Studie von Barz und Randoll} % (fold)
 \label{sub:hauptergebnisse}
@@ -54,18 +45,13 @@ Zum Beispiel das Bevorzugen und Vernachlässigen von Interessensdomänen oder di
 Die Ergebnisse beziehen sich auf relativ weit zurückliegende Schulerfahrungen. 
 Der jüngste Jahrgang der Befragung verließ spätestens 1994 die Schule. 
 Da sich die Waldorfpädagogik aber auf das von Steiner zurückgehende Erziehungs- und Unterrichtskonzept gründet, spielt dieser Einwand kaum eine Rolle. 
-Denn demnach besitzt die Waldorfpädagogik ein zeitlos gültiges und von kurzfristigen pädagogischen Moden unabhängiges Bezugssystem. \citep[Vgl.][S. 16]{randoll07}
+Denn demnach besitzt die Waldorfpädagogik ein zeitlos gültiges und von kurzfristigen pädagogischen Moden unabhängiges Bezugssystem \citep[vgl.][S. 16]{randoll07}.
 
 \subsubsection{Die Berufswahl}
 \label{subsub:Berufswahl}
 
-Für die Studie untersuchten Anne Bonhoeffer und Michael Brater die Aspekte des gelernten Berufs sowohl der Befragten als auch deren Eltern. 
-In \citet[][S. 16f]{randoll07} werden folgende Ergebnisse der Studie genannt: Der am häufigsten angegebene Beruf sowohl bei den ehemaligen Schülern als auch bei den Eltern ist Lehrer. 
-Interessant dabei ist, dass die Personen zumeist Lehrer an staatlichen Schulen geworden sind. 
-15,5\% der Mütter sind Lehrerinnen, davon aber nur 1,5\% an Waldorfschulen. 
-Bei den Vätern gaben 14,2\% den Beruf des Lehrers an und nur 1,4\% davon an Waldorfschulen. 
-Fast ein fünftel der jüngeren Waldorfschüler stammt demnach aus einem Lehrerhaushalt. 
-Der hohe Prozentsatz der Lehrer an staatlichen Schulen zeigt, dass die Eltern dieser Schulform nicht vertrauen und ihre Kinder deshalb auf alternative Schulen, wie z.B. die Waldorfschule schicken.
+Für die Studie untersuchten Anne Bonhoeffer und Michael Brater die Aspekte des gelernten Berufs sowohl der Befragten als auch deren Eltern. In \citet[][S. 16f]{randoll07} werden folgende Ergebnisse der Studie genannt: Der am häufigsten angegebene Beruf sowohl bei den ehemaligen Schülern als auch bei den Eltern ist Lehrer. Interessant dabei ist, dass die Personen zumeist Lehrer an staatlichen Schulen geworden sind. 
+15,5\% der Mütter sind Lehrerinnen, davon aber nur 1,5\% an Waldorfschulen. Bei den Vätern gaben 14,2\% den Beruf des Lehrers an und nur 1,4\% davon an Waldorfschulen. Fast ein fünftel der jüngeren Waldorfschüler stammt demnach aus einem Lehrerhaushalt. Der hohe Prozentsatz der Lehrer an staatlichen Schulen zeigt, dass die Eltern dieser Schulform nicht vertrauen und ihre Kinder deshalb auf alternative Schulen, wie z.B. die Waldorfschule schicken.
 
 Von den ehemaligen Schülern sind dann wiederum 14,6\% Lehrer geworden. 
 In der Stichprobe ist der Anteil an Lehrern fünf mal so hoch wie in der restlichen Bevölkerung. 
@@ -76,7 +62,7 @@ Die Quote von ehemaligen Waldorfschülern, die eine Akademikerlaufbahn einschlag
 Im Vergleich zum Bundesdurchschnitt von 12\% (Stand 2004) ist auch dieser Anteil enorm hoch. 
 Sehr selten schlugen die Schüler eine Berufslaufbahn in der Gruppe der Warenkaufleute und Bürofachkräfte ein. 
 Dies deutet auf eine wirtschaftsferne berufliche Orientierung hin. 
-Aufgrund der in der Studie von Barz und Randall präsentierten Daten kann man die Waldorfschule als \enquote{Schule des Bildungsbürgertums} bezeichnen. \citep[][S. 17]{randoll07} 
+Aufgrund der in der Studie von Barz und Randall präsentierten Daten kann man die Waldorfschule als \enquote{Schule des Bildungsbürgertums} bezeichnen \citep[][S. 17]{randoll07}.
 
 Trotz des Strickunterrichts für Jungen und Holz- und Metallarbeiten für Mädchen sind die Geschlechterrollen in den Berufen eher klassischer Natur. 
 Darauf deutet zumindest die Berufswahl der ehemaligen Schüler hin. 
@@ -88,9 +74,7 @@ Die ehemaligen gaben an, dass die Zufriedenheit am meisten damit zusammenhinge, 
 \label{subsub:lebensorientierung}
 
 Im Weiteren analysierte Thomas Gensicke die zentralen Lebensorientierungen der ehemaligen Waldorfschüler. 
-In \citet[][S. 17ff]{randoll07} werden dazu folgende Aspekte beschrieben: Lebensaspekte, die als wichtig angesehen werden, zeigen eine Grundhaltung, die sehr musisch und kulturell ambitioniert ist. 
-Oft ist diese noch stärker, als es der Alltag gestattet, sie auszuführen. \todo{Verstehe den vorangehenden Satz nicht}
-Ähnlich geht es ihnen dabei bei ehrenamtlichen Engagements und meditativen und kontemplativen Bedürfnissen. 
+In \citet[][S. 17ff]{randoll07} werden dazu folgende Aspekte beschrieben: Lebensaspekte, die als wichtig angesehen werden, zeigen eine Grundhaltung, die sehr musisch und kulturell ambitioniert ist. Der Alltag gestattet es aber oft nicht, sie in der gewünschten Intention ausführen zu können. Ähnlich geht es ihnen dabei bei ehrenamtlichen Engagements und meditativen und kontemplativen Bedürfnissen. 
 In der Gesamtbevölkerung zum Vergleich werden zwischenmenschlich-emotionale Aspekte als eher unauffällig betont. 
 Schnelle Autos fahren, Sportveranstaltungen besuchen oder Fernsehen werden auf der Skala der Wichtigkeit als eher mäßig  beschrieben. 
 Gensicke teilt die ehemaligen Waldorfschüler in drei verschiedene Typen ein: 
@@ -100,7 +84,7 @@ Gensicke teilt die ehemaligen Waldorfschüler in drei verschiedene Typen ein:
 		\item Die Hedonisten (36\%)
 	\end{compactitem}
 
-Die Kulturorientierten bevorzugen anspruchsvolle kulturelle und bildungsbezogene Aktivitäten\footnote{z.B. Museum, Oper, Theater oder Lesen \citep[Vgl.][S. 17]{randoll07}}. 
+Die Kulturorientierten bevorzugen anspruchsvolle kulturelle und bildungsbezogene Aktivitäten\footnote{z.B. Museum, Oper, Theater oder Lesen \citep[vgl.][S. 17]{randoll07}.}. 
 Diese Gruppe interessiert sich am ehesten für antroposophische Themen. 
 22\% davon gaben sogar an, das sie praktizierende oder engagierte Antroposophen seien. 
 Bei den Beziehungsorientierten steht das Mitmenschliche und Emotionale im Vordergrund. 
