--- a/kapitel/titelseite.tex
+++ b/kapitel/titelseite.tex
@@ -13,21 +13,22 @@
 
 \begin{center}
 
-\vspace{1cm}
+\vspace{0,8cm}
 
 %vorgelegt an der...
 \begin{large}
 Universität zu Köln\\
 Humanwissenschaftliche Fakultät\\
+Erziehungswissenschaft (1-Fach)\\
 BM 1 - Grundlagen der Erziehungswissenschaft\\
-\vspace{0.8cm}
+\vspace{1cm}
 \begin{scshape}
 Hausarbeit\\ 
 \end{scshape}
 \end{large}
 
 
-\vspace{1.7cm}
+\vspace{1.5cm}
 
 %Deutscher Titel
 \begin{rmfamily}
@@ -63,6 +64,7 @@ Seminar: Reformpädagogik und Schule\\ [0.8em]
 							  
 \begin{large}
 Wintersemester 2012/2013\\
+Abgabe der Arbeit: xx.03.2013\\
 \end{large}
 
 \vspace{1.7cm}
@@ -75,16 +77,15 @@ Wintersemester 2012/2013\\
 %Kontaktmöglichkeiten des Autors und der Prüfer
 %\begin{center}
 
-\todo{Matr.Nr. fehlt}
-
 %Autor der Bachelorarbeit und die Prüfer
 \begin{tabular}{rl}
         eingereicht von:  &  Birgit Schlotter\\
-       			       &  Humboldtstraße 15\\
-			       &  50676 Köln\\
-			&  Tel.: 01 77 - 6 41 66 05\\
-			&  E-mail: bschlott@smail.uni-koeln.de\\
-			&  1. Semester\\[0.8em]
+       			    	  &  Humboldtstraße 15\\
+			      		  &  50676 Köln\\
+			      		  &  Matrikel-Nr.: 5587077\\
+						  &  Tel.: 01 77 - 6 41 66 05\\
+						  &  E-mail: bschlott@smail.uni-koeln.de\\
+						  &  1. Semester\\[0.8em]
 \end{tabular}
 
 
