--- a/kapitel/Rudolf_Steiner.tex
+++ b/kapitel/Rudolf_Steiner.tex
@@ -1,24 +1,22 @@
 %!TEX root = ../hausarbeit.tex
 \section{Rudolf Steiner}
-\subsection{Biographie - Steiner in seinen frühen Jahren}
-Rudolf Steiner wurde am 27.02.1861 in Kraljevek (ehemals Österreich, heute Kroatien) geboren. Er konnte dank eines Stipendiums Mathematik und Naturwissenschaften an der Wiener Technischen Hochschule und nebenbei noch Literatur, Philosophie und Geschichte studieren. \citep[Vgl.][]{wikipedia}
+\subsection{Die frühen Jahre}
+Rudolf Steiner wurde am 27.02.1861 in Kraljevek (ehemals Österreich, heute Kroatien) geboren. Er konnte dank eines Stipendiums Mathematik und Naturwissenschaften an der Wiener Technischen Hochschule und nebenbei noch Literatur, Philosophie und Geschichte studieren \citep[vgl.][]{wikipedia}.
 
-Steiner promovierte 1891 zum Doktor der Philosophie an der Universität Rostock mit einer Arbeit über die Grundlagen der Erkenntnistheorie. Diese Arbeit wurde später erweitert und erschien dann als Buch unter dem Titel \emph{Wahrheit und Wissenschaft. Vorspiel einer Philosophie der Freiheit}. Sein Werk \emph{Philosophie der Freiheit}, was meist als sein Hauptwerk angesehen wird, entstand unter anderem in dieser Zeit. \citep[Vgl.][]{steiner}
+Steiner promovierte 1891 zum Doktor der Philosophie an der Universität Rostock mit einer Arbeit über die Grundlagen der Erkenntnistheorie. Diese Arbeit wurde später erweitert und erschien dann als Buch unter dem Titel \emph{Wahrheit und Wissenschaft. Vorspiel einer Philosophie der Freiheit}. Sein Werk \emph{Philosophie der Freiheit}, was meist als sein Hauptwerk angesehen wird, entstand unter anderem in dieser Zeit \citep[vgl.][]{steiner}.
 
-Steiner begann eine schriftstellerische Tätigkeit und gab verschiedene literarische Zeitschriften heraus. Von 1882 bis 1897 war Steiner z.B. Herausgeber der naturwissenschaftlichen Schriften Johann Wolfgang von Goethes. Daneben gab er aber auch Werke von Schopenhauer und Jean Paul heraus. Zuerst wurden seine herausgegebenen Bände von Goethe außerordentlich gelobt. Allerdings wurde dann recht früh bemängelt, dass er nicht Goethes Weltanschauung sondern seine eigene darstellte. \citep[Vgl.][]{steiner, wikipedia}
+Steiner begann eine schriftstellerische Tätigkeit und gab verschiedene literarische Zeitschriften heraus. Von 1882 bis 1897 war Steiner z.B. Herausgeber der naturwissenschaftlichen Schriften Johann Wolfgang von Goethes. Daneben gab er aber auch Werke von Schopenhauer und Jean Paul heraus. Zuerst wurden seine herausgegebenen Bände von Goethe außerordentlich gelobt. Allerdings wurde dann recht früh bemängelt, dass er nicht Goethes Weltanschauung sondern seine eigene darstellte \citep[vgl.][]{steiner, wikipedia}.
 
 Wie in \citet{hemleben63} beschrieben, erhielt Steiner im Jahr 1900 die Aufforderung, in der Theosophischen Bibliothek an zwei Abenden vor der Theosopischen Gesellschaft zu referieren. Dadurch hatte er ein Forum gefunden, vor dem er \enquote{die Fundamente seines zukünftigen Wirkens legen konnte} \site{hemleben63}{78}. In den beiden Wintern 1900/01 und 1901/02 folgten weitere Vorträge vor dem selbem Hörerkreis. Die Inhalte dieser Vorträge wurden in den Büchern \emph{Die Mystik im Aufgange des neuzeitlichen Geisteslebens und ihr Verhältnis zur modernen Weltanschauung} und \emph{Das Christentum als mystische Tatsache} veröffentlicht, welche als wesentliche Vorboten der Anthroposophie gelten.
 
-\subsection{Biographie - Steiner in seinen späten Jahren} % (fold)
+\subsection{Die späten Jahre} % (fold)
 \label{sub:biographie_steiner_in_seinen_sp_ten_jahren}
 
-\todo{Ich würde diese zwei Abschnitte eher \enquote{Die frühe Jahre} und \enquote{Die späten Jahre nennen}}
-
-In den Jahren 1912/13 kam es wegen Steiners Stellung zum Christentum zum Bruch mit der indisch-angelsächsischen Theosophie \citep[Vgl.][S. 80]{hemleben63}. Steiner hat \enquote{in Jesus Christus und dem 'Ereignis von Golgatha' das zentrale Geschehen der Erd- und Menschheitsgeschichte gesehen.} \site{hemleben63}{80} Dieser Ansicht waren die Theosophen nicht. Nach dem Rausschmiss Steiners von der theosophischen Gesellschaft 1913 fühlte er sich genötigt, die anthroposophische Gesellschaft zu gründen.
+In den Jahren 1912/13 kam es wegen Steiners Stellung zum Christentum zum Bruch mit der indisch-angelsächsischen Theosophie \citep[vgl.][S. 80]{hemleben63}. Steiner hat \enquote{in Jesus Christus und dem 'Ereignis von Golgatha' das zentrale Geschehen der Erd- und Menschheitsgeschichte gesehen.} \site{hemleben63}{80} Dieser Ansicht waren die Theosophen nicht. Nach dem Rausschmiss Steiners von der theosophischen Gesellschaft 1913 fühlte er sich genötigt, die anthroposophische Gesellschaft zu gründen.
 
 1919 bat Emil Molt, Direktor der Waldorf-Astoria, Rudolf Steiner um Unterstützung bei der Gründung einer Betriebsschule für die Kinder seiner Arbeiter. Dadurch entstand die erste Waldorfschule in Stuttgart. \citet[S. 124]{hemleben63} beschreibt, dass die Waldorfschule \enquote{zunächst als Betriebsschule einer Zigarettenfabrik - in Wirklichkeit als fruchtbarer Keim einer Weltschulbewegung} entstand. Steiner hielt in der Zeit von 1919 - 1924 etliche Vortragszyklen für Lehrer und Erzieher in Deutschland, England und Holland. Er vermittelte pädagogische Leitideen auf Grund seiner anthroposophischen Menschenkunde. 
 
-1924 wurde von linker, okkulter Seite ein Giftanschlag auf Steiner verübt. Im September erlitt er einen physischen Zusammenbruch und sein Krankenlager begann. Währenddessen setzte er aber seine Arbeit an seiner Autobiographie \emph{Mein Lebensgang} fort, die er allerdings nicht beenden konnte. Am 30. März 1925 starb Rudolf Steiner in Dornach in der Schweiz. \citep[Vgl.][]{karl12}
+1924 wurde von linker, okkulter Seite ein Giftanschlag auf Steiner verübt. Im September erlitt er einen physischen Zusammenbruch und sein Krankenlager begann. Währenddessen setzte er aber seine Arbeit an seiner Autobiographie \emph{Mein Lebensgang} fort, die er allerdings nicht beenden konnte. Am 30. März 1925 starb Rudolf Steiner in Dornach in der Schweiz \citep[vgl.][]{karl12}.
 
 
 
