Satz auf neuer Zeile

--- a/kapitel/Fazit.tex
+++ b/kapitel/Fazit.tex
@@ -1,7 +1,8 @@
 %!TEX root = ../hausarbeit.tex
 \section{Fazit}
 
-Ich war Schüler an einer staatlichen Schule und kann somit nicht aus Erfahrung sprechen, wie es ist, an einer Waldorfschule unterrichtet zu werden. Meiner Meinung nach steht der Großteil der Menschen dem Neuen, vor allem aber dem Anderen sehr skeptisch gegenüber\footnote{Hierzu passt das Sprichwort von Oliver Hassencamp: Was der Bauer nicht kennt, frisst er nicht. [...] \citep[Vgl.][]{roschk13}}, was bei mir auch auf reformpädagogische Schulen zutrifft. Wie ich im Seminar und während des Schreibens dieser Hausarbeit aber  gemerkt habe, kann man sich von vielen Vorurteilen lösen, wenn man sich nur näher mit der Thematik beschäftigt.
+Ich war Schüler an einer staatlichen Schule und kann somit nicht aus Erfahrung sprechen, wie es ist, an einer Waldorfschule unterrichtet zu werden. Meiner Meinung nach steht der Großteil der Menschen dem Neuen, vor allem aber dem Anderen sehr skeptisch gegenüber\footnote{Hierzu passt das Sprichwort von Oliver Hassencamp: Was der Bauer nicht kennt, frisst er nicht. [...] \citep[Vgl.][]{roschk13}}, was bei mir auch auf reformpädagogische Schulen zutrifft. 
+Wie ich im Seminar und während des Schreibens dieser Hausarbeit aber  gemerkt habe, kann man sich von vielen Vorurteilen lösen, wenn man sich nur näher mit der Thematik beschäftigt.
 
 Wie wirkt nun die Waldorfpädagogik im Licht der Empirie? Schaut man sich die Studien oberflächlich an, ist die Waldorfpädagogik von vielen Vorteilen geprägt. Ein überdurchschnittlich hoher Anteil an Absolventen, die eine Akademikerlaufbahn einschlagen, ein hohes Maß an persönlichem Wohlbefinden auf der Schule, die Schüler lernen fürs Leben, nicht für Noten und das soziale Mit- und Füreinander wird stark gefördert. Wieso lernen die staatlichen Schulen also nicht von den Waldorfschulen?
 
